// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled Breakpoints work in variants 1`] = `
{
  "orderedAppliedStyles": [
    "._initial_c_dzoaVP {color: red;}",
    "._breakpointOne_h_hGDbbG {height: 10px;}",
    "._breakpointTwo_h_cvoKvR {height: 20px;}"
  ],
  "props": {
    "className": "_initial_c_dzoaVP _breakpointOne_h_hGDbbG _breakpointTwo_h_cvoKvR scid-kvQUME"
  },
  "children": [
    "no variant"
  ]
}
`;

exports[`styled Breakpoints work in variants and when a responsive variant is passed ot the element 1`] = `
{
  "orderedAppliedStyles": [
    "._initial_c_dzoaVP {color: red;}",
    "._breakpointOne_h_ctNPWK {height: 100px;}",
    "._breakpointTwo_h_clZhDR {height: 200px;}"
  ],
  "props": {
    "className": "_breakpointOne_h_ctNPWK _breakpointTwo_h_clZhDR _initial_c_dzoaVP scid-cXpAaU"
  },
  "children": [
    "with responsive variant"
  ]
}
`;

exports[`styled Breakpoints work in variants and when the variant is passed to the jsx element 1`] = `
{
  "orderedAppliedStyles": [
    "._initial_c_dzoaVP {color: red;}",
    "._breakpointOne_h_inlnue {height: 1000px;}",
    "._breakpointTwo_h_dbWWOp {height: 2000px;}"
  ],
  "props": {
    "className": "_breakpointOne_h_inlnue _breakpointTwo_h_dbWWOp _initial_c_dzoaVP scid-cXpAaU"
  },
  "children": [
    "with variant"
  ]
}
`;

exports[`styled Handles compound variant 1`] = `
{
  "orderedAppliedStyles": [
    "._bieopk {background-color: red;}",
    "._dtTvho {height: 60px;}"
  ],
  "props": {
    "className": "_dtTvho _bieopk scid-URbJg"
  },
  "children": [
    "not compound"
  ]
}
`;

exports[`styled Handles compound variant 2`] = `
{
  "orderedAppliedStyles": [
    "._bSHlld {height: 30px;}",
    "._hEGtPv {background-color: compoundColor;}"
  ],
  "props": {
    "className": "_hEGtPv _bSHlld scid-URbJg"
  },
  "children": [
    "compound"
  ]
}
`;

exports[`styled Handles css prop 1`] = `
{
  "orderedAppliedStyles": [
    "._iBRUhC {background-color: gray;}",
    "._dzoaVP {color: red;}"
  ],
  "props": {
    "className": "_dzoaVP _iBRUhC scid-dmZJpl"
  },
  "children": [
    "hello world"
  ]
}
`;

exports[`styled Handles css prop 2`] = `
{
  "orderedAppliedStyles": [
    "._iBRUhC {background-color: gray;}",
    "._dzoaVP {color: red;}"
  ],
  "props": {
    "className": "_dzoaVP _iBRUhC scid-dmZJpl"
  },
  "children": [
    "hello world"
  ]
}
`;

exports[`styled It handles variants with a numeric value of 0 1`] = `
{
  "orderedAppliedStyles": [
    "._jefWVX {height: 1px;}"
  ],
  "props": {
    "className": "_jefWVX scid-fUwIQk"
  },
  "children": [
    "height should equal '1px'"
  ]
}
`;

exports[`styled Renders basic component 1`] = `
{
  "orderedAppliedStyles": [
    "._bOFHNE div {font-size: 18px;}"
  ],
  "props": {
    "className": "hi _bOFHNE scid-dIyoRL"
  },
  "children": [
    "hello world"
  ]
}
`;

exports[`styled renders component with variant 1`] = `
{
  "orderedAppliedStyles": [
    "._iBRUhC {background-color: gray;}"
  ],
  "props": {
    "className": "_iBRUhC scid-gFxMiu"
  },
  "children": [
    "hello world"
  ]
}
`;

exports[`styled renders component with variant 2`] = `
{
  "orderedAppliedStyles": [
    "._bieopk {background-color: red;}"
  ],
  "props": {
    "className": "_bieopk scid-gFxMiu"
  },
  "children": [
    "hello world"
  ]
}
`;

exports[`styled renders component with variant 3`] = `
{
  "orderedAppliedStyles": [
    "._YfjLh {background-color: blue;}"
  ],
  "props": {
    "className": "_YfjLh scid-gFxMiu"
  },
  "children": [
    "hello world"
  ]
}
`;
